--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,12 @@
 <property name="src.java.dir" location="./src"/>
 <property name="result.javaclasses.dir" location="${result.dir}/classes"/>
 
-
+<path id="NecessaryLibraries">
+<pathelement location="./MyLibraries/junit.jar"/>
+<!--matcher-->
+<pathelement location="./MyLibraries/hamcrest-core-1.3.jar"/>
+<!--<pathelement location="./MyLibraries/selenium-server-standalone-3.8.1.jar"/>-->
+</path>
 
 <target name="compile">
 <mkdir dir="${result.javaclasses.dir}"/>
