--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
 <mkdir dir="${result.javaclasses.dir}"/>
 <javac srcdir="${src.java.dir}" destdir="${result.javaclasses.dir}" debug="true" includeantruntime="false">
 <classpath>
-<path refid="NeccessaryLibraries">
+<path refid="NeccessaryLibraries"/>
 <pathelement location="${result.javaclasses.dir}"/>
 </classpath>
 </javac>
