--- a/build.xml
+++ b/build.xml
@@ -21,7 +21,7 @@
 
 <target name="test" depends="compile">
 <!--fork : each test will run in its own JVM (to seperate test cases)-->
-<junit printssummary="true" haltonfailure="true fork="true>
+<junit printssummary="true" haltonfailure="true" fork="true>
 <classpath>
 <path refid="NeccessaryLibraries"></path>
 <pathelement location="${result.javaclasses.dir}"/>
