--- a/build.xml
+++ b/build.xml
@@ -5,9 +5,11 @@
 <path id="NecessaryLibraries">
 <pathelement location="./MyLibraries/junit.jar"/>
 <!--matcher-->
-<pathelement location="./MyLibraries/hamcrest-core-1.3.jar"/>
+<pathelement location="./MyLibraries/org.hamcrest.core_1.3.0.v201303031735.jar"/>
 <!--<pathelement location="./MyLibraries/selenium-server-standalone-3.8.1.jar"/>-->
-</path>
+<pathelement location="./MyLibraries/org.junit.jupiter.api_5.0.0.v20170910-2246.jar"/>
+  
+  </path>
 
 <target name="compile">
 <mkdir dir="${result.javaclasses.dir}"/>
