--- a/build.xml
+++ b/build.xml
@@ -23,7 +23,7 @@
 
 <target name="test" depends="compile">
 <!--fork : each test will run in its own JVM (to seperate test cases)-->
-<junit printssummary="true" haltonfailure="true" fork="true">
+<junit haltonfailure="true" fork="true">
 <classpath>
 <path refid="NecessaryLibraries"></path>
 <pathelement location="${result.javaclasses.dir}"/>
