--- a/build.xml
+++ b/build.xml
@@ -24,7 +24,18 @@
 
 <target name="test" depends="compile">
 <!--fork : each test will run in its own JVM (to seperate test cases)-->
-
+<junit printssummary="true" haltonfailure="true" fork="true">
+<classpath>
+<path refid="NecessaryLibraries"></path>
+  <pathelement location="${result.javaclasses.dir}"/>
+</classpath>
+<formatter type="brief" usefile="false"/>
+<batchtest>
+<fileset dir="$result.javaclasses.dir}">
+<include name="**/*Junit.class"/>
+</fileset>
+</batchtest>
+</junit>
 </target>
 </project>
 
