--- a/build.xml
+++ b/build.xml
@@ -31,7 +31,7 @@
 </classpath>
 <formatter type="brief" usefile="false"/>
 <batchtest>
-<fileset dir="$result.javaclasses.dir}">
+<fileset dir="${result.javaclasses.dir}">
 <include name="**/*Junit.class"/>
 </fileset>
 </batchtest>
