--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <project default="compile">
 <property name="src.java.dir" location="./src"/>
-  <property name="result.dir" location="./target"/>
-<property name="result.javaclasses.dir" location="${result.dir}/classes"/>
+<property name="result.dir" location="./"/>
+<property name="result.javaclasses.dir" location="${result.dir}/bin"/>
 
 <path id="NecessaryLibraries">
 <pathelement location="./MyLibraries/junit.jar"/>
@@ -32,7 +32,12 @@
 <formatter type="brief" usefile="false"/>
 <batchtest>
 <fileset dir="${result.javaclasses.dir}">
-<include name="**/*Junit.class"/>
+<include name="Sub.class"/>
+<include name="Multi.class"/>
+<include name="Mod.class"/>
+<include name="MinusNumberSqaureRoot.class"/>
+<include name="DivByZero.class"/>
+<include name="Add.class"/>
 </fileset>
 </batchtest>
 </junit>
