--- a/.classpath
+++ b/.classpath
@@ -1,38 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<!-- ✅ Java SDK -->
+	<!-- ✅ Java Runtime -->
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-9">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 
-	<!-- ✅ JUnit 4 Test Framework -->
+	<!-- ✅ Testing Framework -->
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="lib/junit-jupiter-api-5.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/junit-platform-console-standalone-1.8.2.jar"/>
 
 	<!-- ✅ Source & Output -->
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="bin"/>
 
-	<!-- ✅ Web UI Automation -->
+	<!-- ✅ Web Automation -->
 	<classpathentry kind="lib" path="lib/selenium-server-standalone.jar"/>
 	<classpathentry kind="lib" path="lib/webdrivermanager-5.3.2.jar"/>
 
-	<!-- ✅ IO + Logging -->
-	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
+	<!-- ✅ Logging -->
 	<classpathentry kind="lib" path="lib/slf4j-api-1.7.36.jar"/>
 	<classpathentry kind="lib" path="lib/logback-classic-1.2.11.jar"/>
 	<classpathentry kind="lib" path="lib/logback-core-1.2.11.jar"/>
 
-	<!-- ✅ JSON Processing (API, config) -->
+	<!-- ✅ File Handling -->
+	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
+	<classpathentry kind="lib" path="lib/opencsv-5.5.2.jar"/>
+
+	<!-- ✅ JSON & HTTP -->
 	<classpathentry kind="lib" path="lib/jackson-core-2.13.1.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.13.1.jar"/>
-
-	<!-- ✅ HTTP Client (REST API Testing) -->
 	<classpathentry kind="lib" path="lib/httpclient-4.5.13.jar"/>
 	<classpathentry kind="lib" path="lib/httpcore-4.4.13.jar"/>
 
-	<!-- ✅ Optional: JUnit 5 (future-proofing) -->
-	<classpathentry kind="lib" path="lib/junit-jupiter-api-5.8.2.jar"/>
-	<classpathentry kind="lib" path="lib/junit-platform-console-standalone-1.8.2.jar"/>
+	<!-- ✅ Excel Support -->
+	<classpathentry kind="lib" path="lib/poi-5.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-5.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/poi-ooxml-lite-5.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="lib/xmlbeans-5.1.1.jar"/>
+
+	<!-- ✅ Beautiful HTML Reporting -->
+	<classpathentry kind="lib" path="lib/extentreports-5.0.9.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.8.9.jar"/>
 </classpath>
