--- a/.classpath
+++ b/.classpath
@@ -7,10 +7,12 @@
 		</attributes>
 	</classpathentry>
 
-	<!-- ✅ Testing Framework -->
+	<!-- ✅ Testing Frameworks -->
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/junit-jupiter-api-5.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit-platform-console-standalone-1.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/testng-7.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-2.2.jar"/>
 
 	<!-- ✅ Source & Output -->
 	<classpathentry kind="src" path="src"/>
@@ -25,7 +27,7 @@
 	<classpathentry kind="lib" path="lib/logback-classic-1.2.11.jar"/>
 	<classpathentry kind="lib" path="lib/logback-core-1.2.11.jar"/>
 
-	<!-- ✅ File Handling -->
+	<!-- ✅ File & Data Handling -->
 	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/opencsv-5.5.2.jar"/>
 
@@ -42,7 +44,9 @@
 	<classpathentry kind="lib" path="lib/commons-collections4-4.4.jar"/>
 	<classpathentry kind="lib" path="lib/xmlbeans-5.1.1.jar"/>
 
-	<!-- ✅ Beautiful HTML Reporting -->
+	<!-- ✅ HTML Reporting -->
 	<classpathentry kind="lib" path="lib/extentreports-5.0.9.jar"/>
 	<classpathentry kind="lib" path="lib/gson-2.8.9.jar"/>
+	<classpathentry kind="lib" path="lib/allure-java-commons-2.17.3.jar"/>
+	<classpathentry kind="lib" path="lib/allure-testng-2.17.3.jar"/>
 </classpath>
