--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,8 @@
 	<classpathentry kind="lib" path="lib/junit-platform-console-standalone-1.8.2.jar"/>
 	<classpathentry kind="lib" path="lib/testng-7.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-core-2.2.jar"/>
+	<classpathentry kind="lib" path="lib/assertj-core-3.24.2.jar"/>
+	<classpathentry kind="lib" path="lib/awaitility-4.2.0.jar"/>
 
 	<!-- ✅ Source & Output -->
 	<classpathentry kind="src" path="src"/>
@@ -31,6 +33,7 @@
 	<classpathentry kind="lib" path="lib/commons-io-2.11.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.12.0.jar"/>
 	<classpathentry kind="lib" path="lib/opencsv-5.5.2.jar"/>
+	<classpathentry kind="lib" path="lib/freemarker-2.3.32.jar"/>
 
 	<!-- ✅ JSON & HTTP -->
 	<classpathentry kind="lib" path="lib/jackson-core-2.13.1.jar"/>
@@ -52,7 +55,8 @@
 	<classpathentry kind="lib" path="lib/allure-java-commons-2.17.3.jar"/>
 	<classpathentry kind="lib" path="lib/allure-testng-2.17.3.jar"/>
 
-	<!-- ✅ Mocking / Utility Tools -->
+	<!-- ✅ Utility, Mocking, Email -->
 	<classpathentry kind="lib" path="lib/mockito-core-4.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/lombok-1.18.24.jar"/>
+	<classpathentry kind="lib" path="lib/javax.mail-1.6.2.jar"/>
 </classpath>
