--- a/.project
+++ b/.project
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>MVC Calc</name>
-	<comment>Basic Java MVC Calculator with Eclipse JDT and JUnit support</comment>
+	<comment>Java MVC Calculator with Eclipse JDT, JUnit, Maven, and web support</comment>
 	<projects>
 	</projects>
 	<buildSpec>
+		<!-- ✅ Java compiler builder -->
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments/>
 		</buildCommand>
-		<!-- ✅ JUnit builder for test execution -->
+
+		<!-- ✅ JUnit test runner -->
 		<buildCommand>
 			<name>org.eclipse.jdt.junit.JUnitBuilder</name>
 			<arguments/>
 		</buildCommand>
+
+		<!-- ✅ Maven build support -->
+		<buildCommand>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<arguments/>
+		</buildCommand>
+
+		<!-- ✅ Web facets builder (future web support) -->
+		<buildCommand>
+			<name>org.eclipse.wst.common.project.facet.core.builder</name>
+			<arguments/>
+		</buildCommand>
 	</buildSpec>
+
 	<natures>
+		<!-- ✅ Java project -->
 		<nature>org.eclipse.jdt.core.javanature</nature>
+
+		<!-- ✅ Maven project -->
+		<nature>org.eclipse.m2e.core.maven2Nature</nature>
+
+		<!-- ✅ Web tools support -->
+		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 	</natures>
 </projectDescription>
